--- a/docs/ReleaseNotes.txt
+++ b/docs/ReleaseNotes.txt
@@ -1,4 +1,4 @@
-Zeromq Data Transfer develop
+Zeromq Data Transfer 2.2.0
 
 - Fixed stopping: The service is shut down if one process dies
 - Enabled whitelist for data receiver
