--- a/docs/ReleaseNotes.txt
+++ b/docs/ReleaseNotes.txt
@@ -1,5 +1,9 @@
 Zeromq Data Transfer 2.3.1
 
+- Fixed log rotation
+
+Zeromq Data Transfer 2.3.1
+
 - Fixed filename sending for requests (unicode problem)
 - Fixed missing metadata if no target is specified
 - Fixed parallel directory creation attempts
