--- a/docs/ReleaseNotes.txt
+++ b/docs/ReleaseNotes.txt
@@ -1,10 +1,21 @@
 HiDRA develop
 
-- Renamed APIs for data ingest
+- Added generic hidra control client with included authentication (host-based)
+- Clean up and consolidation of helper functions
+- PEP8 compliance
+- Make API classes available at the package level
+- Fixed init script for Ubuntu and Debian
+- Reordered directory structure
+- Added DNS name support
+- Added support for building RPMs
+- Added automatic argument and config parsing (and fixed bugs in parsing)
+- Added Python 3 support
+- Renamed APIs and API arguments
 
 HiDRA 2.4.2
 
 - Changed process name in initScript
+- Building executables with cx_Freeze
 - IPC directory is set to world/write readable when created
 - IPC directory is removed (if empty) when HiDRA is stopped
 
