--- a/docs/ReleaseNotes.txt
+++ b/docs/ReleaseNotes.txt
@@ -1,4 +1,5 @@
 HiDRA develop
+HiDRA 3.0.1
 
 - Added option to get configured settings to hidra control client
 - The connection list is now contained in a seperate module
