Updated release notes

--- a/docs/ReleaseNotes.txt
+++ b/docs/ReleaseNotes.txt
@@ -1,4 +1,61 @@
 HiDRA develop
+
+- Adjusted host names in mapping for control API
+- Run control server as user hidra
+- RPM: Split single package into multiple subpackages (hidra, python-hidra, hidra-control-client)
+- Fixed logging in transfer when logutils is used
+- Updated requirement version of zmq in spec
+- Transfer API responds to confirmation requests after data handling
+- Control server sets subdirectories <commissioning|current>/scratch_bl and <commissioning|current>/raw instead of commissioning and current
+- Path names have always unix format (even when send from windows)
+- Added parameter test to DataManager
+- Removed setup method in data fetchers
+- Fixed data socket reconnection after netgroup change
+- Notice netgroup changes during runtime
+- Fixed relative path starting with a backslash in transfer
+- Changed structure of event detectors to inherit from a base class
+- Converted data fetchers to classes which inherit from a base class
+- Added first versions of event detectors and data fetchers for using HiDRA in series
+- Fixed file closing if message size equals chunksize (Transfer)
+- Renamed Eiger specific parameters to be more generic
+- Removed old beamline specific control clients
+- Renamed options in hidra control
+- Added support for configuration of multiple detector with one HiDRA control
+- Added procname to init script
+- Added msi building support for freeze
+- HiDRA control: Exchanged normal socket communication with ZMQ communication
+- Added Dockerfiles for sender, receiver and API usage (based on Ubuntu)
+- Added platform specific config file to freeze
+- Changed meaning when whitelist is to None in datamanager config
+- Added option "getsettings" to init script (SuSE)
+- Fixed start of transfer API if one host in whitelist id not known
+- Metadata dict as call by reference for datafetcher modules
+- Automatic beamline extraction from config dict (in _constants.py )for hidra control
+- Fixed examples and generalized them
+- Added test file for hidra-fs vs API
+- Added first version of hidra filesystem based on FUSE
+- Changed config parameter for data stream target (one list instead of two single parameters)
+- Added script to check if receiver is running
+- Added beamline to receiver init script
+- Closing still open files on shutdown (transfer)
+- Added GPFS fallback script
+- Receiver runs as pxxuser
+- Fixed poller shutdown in transfer API
+- Fixed bumpversion usage
+- Changed log directory to /var/log/hidra
+- Cleanup of freeze setup
+- Reduced config file for Pilatus detector to minimum
+- Added options for handling the removal of the source data:
+    - regular check of file writing status of receiver
+    - only with confirmation for each file
+- Added and used cfel_optargs for config parsing
+- If the receiver is not responding all processes in the datamanager enters sleep mode until this is resolved
+- Added init script for SuSE
+- Added type checking for parameters in config
+- Made existence of fixed subdirectories mandatory
+- Enabled differentiation between 32 and 64bit architecture when freezing HiDRA
+- Added HiDRA receiver unit file
+
 HiDRA 3.0.2
 
 - Fixed parallel hidra control client usage of script and permanent open connection (e.g. Tango)
@@ -25,7 +82,7 @@ HiDRA 3.0.0
 
 HiDRA 2.4.2
 
-- Changed process name in initScript
+- Changed process name in init script
 - Building executables with cx_Freeze
 - IPC directory is set to world/write readable when created
 - IPC directory is removed (if empty) when HiDRA is stopped
