--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.5-1) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 23 Aug 2018 15:58:08 +0200
 hidra (4.0.4-1) stretch; urgency=low
 
   * repackaged for stretch
