--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.7-1) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Tue, 28 Aug 2018 16:29:34 +0200
 hidra (4.0.6-1) stretch; urgency=low
 
   * Bump version
