Fixed log dir permissions for debian packages

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
+hidra (4.0.7-3+deb9u5~fsec) stretch; urgency=low
+
+  * Fix log dir permissions
+
+ -- J. Blume <johannes.blume@desy.de>  Tue, 05 Sep 2018 16:40:21 +0200
 hidra (4.0.7-2+deb9u5~fsec) stretch; urgency=low
 
-  * Fix pacakge name
+  * Fix package name
 
  -- M. Kuhn <manuela.kuhn@desy.de>  Tue, 04 Sep 2018 17:07:23 +0200
 hidra (4.0.7-1) stretch; urgency=low
