--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.8-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Tue, 11 Sep 2018 16:46:57 +0200
 hidra (4.0.7-4+deb9u5~fsec) stretch; urgency=low
 
   * Fix postinstall mixup
