--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.9-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Wed, 12 Sep 2018 13:48:40 +0200
 hidra (4.0.8-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
