--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.10-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 18 Oct 2018 08:54:30 +0200
 hidra (4.0.9-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
