--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.12-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 25 Oct 2018 11:38:53 +0200
 hidra (4.0.11-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
