--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.15-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Wed, 28 Nov 2018 15:37:31 +0100
 hidra (4.0.14-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
