--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.20-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Fri, 22 Mar 2019 14:16:56 +0100
 hidra (4.0.19-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
