--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.0.22-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Tue, 23 Apr 2019 15:03:55 +0200
 hidra (4.0.21-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
