--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.0-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 01 Aug 2019 15:18:17 +0200
 hidra (4.0.23-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
