--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.1-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Wed, 04 Sep 2019 11:24:37 +0200
 hidra (4.1.0-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
