--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.2-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Tue, 01 Oct 2019 15:27:55 +0200
 hidra (4.1.1-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
