--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.3-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 10 Oct 2019 09:40:09 +0200
 hidra (4.1.2-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
