--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.5-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Wed, 20 Nov 2019 14:29:54 +0100
 hidra (4.1.4-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
