--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.6-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Wed, 11 Dec 2019 11:49:48 +0100
 hidra (4.1.5-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
