--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.7-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 13 Feb 2020 13:17:39 +0100
 hidra (4.1.6-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
