--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.1.8-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 09 Apr 2020 12:54:49 +0200
 hidra (4.1.7-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
