--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.2.0-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Tue, 16 Jun 2020 20:48:27 +0200
 hidra (4.1.8-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
