Switcheddebiann packaging to use python3

--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.2.1-2+deb9u5~fsec) stretch; urgency=low
+
+  * Switch hidra and hidra-control-client to python3
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Mon, 13 Jul 2020 11:42:27 +0200
 hidra (4.2.1-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
