--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.2.2-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Fri, 31 Jul 2020 12:29:20 +0200
 hidra (4.2.1-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
