--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.2.4-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Thu, 12 Nov 2020 09:18:59 +0100
 hidra (4.2.3-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
