--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,8 @@
+hidra (4.2.5-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- M. Kuhn <manuela.kuhn@desy.de>  Wed, 24 Feb 2021 11:24:14 +0100
 hidra (4.2.4-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
