--- a/package/debian10/changelog
+++ b/package/debian10/changelog
@@ -1,3 +1,8 @@
+hidra (4.3.2-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- T. Schoof <tim.schoof@desy.de>  Thu, 29 Apr 2021 14:42:44 +0200
 hidra (4.3.1-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
