--- a/package/debian10/changelog
+++ b/package/debian10/changelog
@@ -1,3 +1,8 @@
+hidra (4.4.0-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- T. Schoof <tim.schoof@desy.de>  Fri, 21 May 2021 10:26:03 +0200
 hidra (4.3.2-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
