--- a/package/debian9/changelog
+++ b/package/debian9/changelog
@@ -1,3 +1,8 @@
+hidra (4.4.2-1+deb9u5~fsec) stretch; urgency=low
+
+  * Bump version
+
+ -- T. Schoof <tim.schoof@desy.de>  Wed, 09 Jun 2021 08:54:28 +0200
 hidra (4.4.1-1+deb9u5~fsec) stretch; urgency=low
 
   * Bump version
